--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -1,7 +1,75 @@
-.parent{
-    display: table;
+@import url(http://fonts.googleapis.com/css?family=Open+Sans);
+
+.fondo {
+  background: url(Imagenes/fondoInicio.png);
+  font-family: 'Open Sans', 'sans-serif';
+  font-size: 30px;
 }
-.middle {
-    display: table-cell;
-    vertical-align: middle;
+
+/* div surrounding login form */
+#login {
+  background-color: #eee;
+  opacity: 1;
+  height: 280px;
+  width: 400px;
+  border-radius: 10px;
+  margin: 0 auto;
+  margin-top: 50px;
+  padding: 0;
+  text-align: center;
+}
+
+/* form header */
+h1 {
+  font-size: 32px;
+  padding: 10px;
+  margin: 0;
+  color: #fff;
+  background-color: #55acee;
+  margin-bottom: 15px;
+}
+
+/* text fields */
+input:not([type="button"]) {
+  width: 300px;
+  height: 50px;
+  border-radius: 6px;
+  border: 1px solid #acacac;
+  margin-bottom: 15px;
+  text-align: center;
+  -webkit-transition: all .5s;
+  -moz-transition: all .5s;
+  transition: all .5s;
+  font-size: 25px;
+}
+
+input:not([type="button"]):focus {
+  color: #55acee;
+  width: 370px;
+  border: 1px solid #55acee;
+  outline: none;
+  font-size: 32px;
+}
+
+/* submit button */
+input[type="button"] {
+  font-size: 32px;
+  color: #fff;
+  background-color: #55acee;
+  box-shadow: 0 5px 0 0 #3C93D5;
+  border: none;
+  padding: 10px;
+  width: 400px;
+  display: inline-block;
+  position: relative;
+  outline: none;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+input[type="button"]:active {
+  box-shadow: 0 1px 0 0 #3C93D5;
+  -webkit-transform: translate(0,5px);
+  -moz-transform: translate(0,5px);
+  transform: translate(0,5px);
 }
