--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -23,7 +23,7 @@ h1 {
   font-size: 32px;
   padding: 10px;
   margin: 0;
-  color: #fff;
+  color: #FFFFFF;
   background-color: #55acee;
   margin-bottom: 15px;
 }
@@ -90,7 +90,13 @@ input[type="button"]:active {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
-user agent stylesheet
-div {
-    display: block;
+.close {
+    float: right;
+    font-size: 21px;
+    font-weight: 700;
+    line-height: 1;
+    color: #000;
+    text-shadow: 0 1px 0 #fff;
+    filter: alpha(opacity=20);
+    opacity: .2;
 }
