--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -28,6 +28,14 @@ h1 {
   margin-bottom: 15px;
 }
 
+h2{
+  font-size: 25px;
+  padding: 10px;
+  margin: 0;
+  color: #FFFFFF;
+  background-color: #55acee;
+  margin-bottom: 15px;
+}
 /* text fields */
 input:not([type="button"]) {
   width: 300px;
@@ -114,26 +122,17 @@ hr{
     display: block;
     
 }
-#contenedor {
-
-}
 #cabecera {
-    background:url(Imagenes/cabecera.jpg);
+    background-color: #55acee;
     width: 100%;
-    height: 12%;
+    height:78px;
+   
 }
 #menu {
   float: left;
   width: 18%;
 }
-#menu #elementos{
 
-
-}
-#menu #infousuario{
-
-
-}
 #contenido {
   float: left;
   width: 80%;
@@ -142,10 +141,7 @@ hr{
   float: left;
   width: 80%;
 }
-
-#pie {
-  clear: both;
-}
+/* canvas draggable*/
 .draggable {
   border-radius: 30px;
   background: burlywood;
@@ -156,4 +152,8 @@ hr{
   margin: 10px 10px 10px 0;
   text-align: center;
   display: inline-block;
+}
+ul {
+  padding: .2em .2em .3em .2em;
+  width: 100px;
 }
